--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -162,7 +162,7 @@ When the detection of GW150914 was first announced, many were surprised that it 
 
 The short answer is that the masses themselves should not be surprising -- but perhaps the very existence of merging neutron stars and black holes should be.  But let us start with the masses.  
 
-Compact object masses in double compact object binaries are set by the mass of the star before the collapse or supernova explosion at the end of stellar evolution and the physics of the collapse itself.  The compact object is unlikely to accrete a significant amount of mass after collapse: doubling its mass at the Eddington limit would take more than 100 million years, and the massive companion will only survive for a small fraction of that time.  The mass of the compact remnant is thus set by the pre-collapse mass of the stellar core: the convective region in the center of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on up through iron.  Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}.  Thus, the mass of the stellar core determines the ultimate black hole mass.  If left unperturbed, perhaps a third of the mass of a heavy star will end up in a carbon--oxygen core.  Since stars well in excess of 100 $M_\odot$ have been observed in the local Universe \citep[e.g.,][]{Schneider:2018}, perhaps the right question to ask is not why LIGO observed such heavy black holes, but why we haven't observed such heavy black holes before?  
+Compact object masses in double compact object binaries are set by the mass of the star before the collapse or supernova explosion at the end of stellar evolution and the physics of the collapse itself.  The compact object is unlikely to accrete a significant amount of mass after collapse: doubling its mass at the Eddington limit, which corresponds to an equilibrium between the pressure of radiation released during accretion on the infalling material and gravity, would take more than 100 million years, and the massive companion will only survive for a small fraction of that time.  The mass of the compact remnant is thus set by the pre-collapse mass of the stellar core: the convective region in the center of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on up through iron.  Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}.  Thus, the mass of the stellar core determines the ultimate black hole mass.  If left unperturbed, perhaps a third of the mass of a heavy star will end up in a carbon--oxygen core.  Since stars well in excess of 100 $M_\odot$ have been observed in the local Universe \citep[e.g.,][]{Schneider:2018}, perhaps the right question to ask is not why LIGO observed such heavy black holes, but why we haven't observed such heavy black holes before?  
 
 The answer has to do with the mass loss from massive stars.  The intense radiation from these stars -- they may have luminosities of order a hundred thousand times greater than the Sun -- drives significant winds, which can remove much of the material from the star.  Metals like iron, with their many absorption lines, are particularly efficient at capturing the radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity, is a key ingredient in determining stellar winds \citep{Vink:2001}.  Although wind models are uncertain \citep[e.g.,][]{Renzo:2017}, simulations suggest that at the metallicity of our solar neighborhood (where roughly 2\% of the stellar matter by mass are metals -- elements heavier than hydrogen and helium, formed by earlier stellar generations rather than during the Big Bang), the maximum black hole masses are only around $15 M_\odot$ \citep{Belczynski:2009,Spera:2015}.  This matches the observations described in the previous section.  Thus, forming heavier black holes requires stellar progenitors born in regions with lower metallicity, that is, fewer preceding stellar generations.  This might either involve low-mass metal-poor galaxies, or formation in the very distant past with a long delay time between star formation and the relatively local black hole mergers \citep{Belczynski:2016}, but more on that below.  Figure \ref{fig:BHremnant} illustrates this by showing the compact remnant (neutron star or black hole) mass as a function of the zero-age main sequence stellar mass as modeled with the COMPAS binary population synthesis code (see \url{http://www.sr.bham.ac.uk/compas}).
 
@@ -222,7 +222,7 @@ The prospects for dynamical formed merging binary black holes in globular cluste
 
 \section{Merger rates and properties}\label{merge}
 
-There are no known direct observations of binary black holes other than the sources observed by LIGO and Virgo through gravitational-wave emission (and a very speculative potential observation through microlensing \citep{Dong:2007}).  Therefore, beyond inference on the growing population of objects detected through gravitational waves, which we will return to in the next section, current knowledge of the merger rates and properties of binary black holes rests on modelling.  For the isolated binary evolution channel this typically takes the form of forward modelling of large populations of stellar binaries distributed according to the observed initial mass and separation distributions in order to estimate the yield of merging binary black holes; this approach is known as population synthesis modelling, and is described in \autoref{form}.  Population synthesis techniques have also been applied to specific observed systems composed of a black hole and a Wolf-Rayet star, such as Cygnus X-1 \citep{Bulik:2008} and Cygnus X-3 \citep{CygnusX3:2012}, but whose future evolution is still uncertain.  The rate predictions from population synthesis models produced prior to 2010 are summarized by \citet{ratesdoc}.  Here, rather than delving into the details of binary evolution, we will attempt to estimate the relevant rates and expectations for the parameters of merging binary black holes, including their masses, spins, and environments.
+There are no known direct observations of binary black holes other than the sources observed by LIGO and Virgo through gravitational-wave emission (and a very speculative potential observation through microlensing \citep{Dong:2007}).  Therefore, beyond inference on the growing population of objects detected through gravitational waves, which we will return to in the next section, current knowledge of the merger rates and properties of binary black holes rests on modelling.  For the isolated binary evolution channel (\autoref{form}) this typically takes the form of forward modelling of large populations of stellar binaries distributed according to the observed initial mass and separation distributions in order to estimate the yield of merging binary black holes; this approach is known as population synthesis modelling.  Population synthesis techniques have also been applied to specific observed systems composed of a black hole and a Wolf-Rayet star, such as Cygnus X-1 \citep{Bulik:2008} and Cygnus X-3 \citep{CygnusX3:2012}, but whose future evolution is still uncertain.  The rate predictions from population synthesis models produced prior to 2010 are summarized by \citet{ratesdoc}.  Here, rather than delving into the details of binary evolution, we will attempt to estimate the relevant rates and expectations for the parameters of merging binary black holes, including their masses, spins, and environments.
 
 In order to survive an evolutionary pathway such as the one depicted in \autoref{fig:COMPAS}, a binary must (i) have the right masses to form two black holes; (ii) have the right separation to avoid a premature merger, yet be close enough to interact; (iii) avoid disruption by supernova kicks; (iv) engage in and survive a common envelope phase; and (v) end up sufficiently compact at binary black hole formation to merge within the age of the Universe.  
 
